# baphomet

./: Cargo.toml
examples/: test.rs
examples/res/: basic.frag  basic.vert
src/: application.rs  averagers.rs  gfx.rs  hlgl.rs  input.rs  lib.rs  time.rs
src/gfx/: batcher.rs  color.rs  g2d.rs
src/gfx/shader_src/: lines.vert  points.frag  points.vert  tris.vert
src/hlgl/: buffer.rs  shader.rs  vec_buffer.rs  vertex_array.rs
