[package]
name = "baphomet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
approx = "0.5.1"
colog = "1.3.0"
log = "0.4.26"
nalgebra-glm = "0.19.0"
pastey = "0.1.0"
rand = "0.9.0"
regex = "1.11.1"
sdl3 = { git = "https://github.com/vhspace/sdl3-rs", features = ["build-from-source-static"] }
